// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailInfoHeader component Snapshot matchs 1`] = `
<div
  className="DetailInfoHeader"
>
  <h2>
    <strong>
      Fight Club
    </strong>
  </h2>
  <h4
    className="DetailInfoHeaderTagline"
  >
     — 
    Mischief. Mayhem. Soap.
  </h4>
</div>
`;

exports[`DetailInfoHeader component Snapshot tagline No tagline 1`] = `
<div
  className="DetailInfoHeader"
>
  <h2>
    <strong>
      Fight Club
    </strong>
  </h2>
</div>
`;

exports[`DetailInfoHeader component Snapshot tagline Tagline is empty string 1`] = `
<div
  className="DetailInfoHeader"
>
  <h2>
    <strong>
      Fight Club
    </strong>
  </h2>
</div>
`;

exports[`DetailInfoHeader component Snapshot tagline Tagline is null 1`] = `
<div
  className="DetailInfoHeader"
>
  <h2>
    <strong>
      Fight Club
    </strong>
  </h2>
</div>
`;
